Add OpenRewrite, refactor code for improved readability and consistency
- Address deprecations
- Address compiler warnings, suppress where not fixable
- Use modern language features where applicable
- Modernize standard library usage
- Remove unnecessary semicolons
- Change class declarations to final where advisable
- Prevent instantiation of utility/helper classes
- Improve logging statements and exception messages
- Ensure consistent spacing and formatting throughout the codebase
- Apply a few suggestions provided by IntelliJ IDEA
- Remove various other code smells